# slancha-local

./: .dockerignore  .env.example  .env.op  .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SESSION_LOG_2026_05_25.md  pyproject.toml
.github/ISSUE_TEMPLATE/: adversarial_prompt.yml  bug_report.yml
.github/workflows/: ci.yml  sidecar-contract.yml
docker/: .dockerignore  Dockerfile  docker-compose.gpu.yml  docker-compose.yml
docs/: MESH_TAILNET_FIX_2026_05_25.md  ROADMAP.md  no-phone-home.md
docs/adr/: 001-rust-port.md  002-privacy-red-lines.md
docs/launch/: API-KEYS.md  SPARK-ROUTER-TEST-PLAN.md  asciinema-script.sh  checklist.md  seed-comments.md
docs/spark/: HANDOFF.md  STATUS.md
docs/train/: MULTIMODAL.md  SPARK-RUNBOOK.md
scripts/: spark_smoke.sh  stub_ollama.py
src/slancha_local/: __main__.py  cli.py  config.py  variants.py
tests/: conftest.py  test_gate_cross_repo_compat.py  test_mesh_auth.py  test_mesh_cross_repo_compat.py  test_mesh_discovery.py  test_mesh_discovery_wiring.py  test_mesh_heartbeat.py  test_mesh_local_fallback.py  test_mesh_remote_backend.py  test_mesh_tailnet.py  test_pref.py  test_pref_cross_repo_compat.py  test_proxy_mesh_lifespan.py  test_usage_sidecar.py
tests/integration/: test_chat_e2e_mocked.py  test_chat_streaming.py  test_decision_trace_on_errors.py  test_models_endpoint.py
tests/privacy/: adversarial_prompts.json  test_adversarial.py
tests/unit/: test_backend_llamacpp.py  test_backend_openai_compat.py  test_bench_scorecard.py  test_classifier_cluster_head.py  test_cli_gate_decide.py  test_cli_utf8.py  (+27 more)
(+74 files in other folders)
