[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slancha-local"
version = "0.0.1"
description = "Local LLM router. OpenAI-compatible. Apache 2.0. The classifier ships in the wheel — your prompts never leave the box by default."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "SlanchaAi", email = "team@slancha.ai"}]
requires-python = ">=3.11"
keywords = ["llm", "routing", "ollama", "local-llm", "openai-compatible"]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.7",
  "pydantic-settings>=2.5",
  "httpx>=0.27",
  "onnxruntime>=1.17",
  "tokenizers>=0.20",
  "numpy>=1.26",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
classifier = [
  "treelite>=4.0",
  "scikit-learn>=1.3",  # required by gtil for some predict paths
]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "respx>=0.21",
  "ruff>=0.6",
  "treelite>=4.0",
  "scikit-learn>=1.3",
]

[project.scripts]
slancha-local = "slancha_local.cli:app"
slancha = "slancha_local.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/slancha_local"]

[tool.hatch.build.targets.wheel.force-include]
"src/slancha_local/assets" = "slancha_local/assets"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
